<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

    <Button
        android:id="@+id/metagetGPS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/metagetGPStxt"
        android:textSize="7pt"
        android:textStyle="normal"
        android:textColor="@android:color/white" />

        <androidx.cardview.widget.CardView
            android:id="@+id/list_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp"
            android:foreground="?attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="8dp"
                    android:paddingLeft="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/latitude"
                        android:textStyle="normal"
                        android:paddingBottom="4dp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/latitude"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:text="@string/novalues"/>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/category_line_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <View
                        android:id="@+id/verticalLine"
                        android:layout_width="match_parent"
                        android:layout_height="1dip"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="#e9e8e8" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="2dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/longitude"
                        android:textStyle="normal"
                        android:paddingBottom="8dp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/longitude"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:text="@string/novalues"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/realtimetxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/infotext"
            android:textStyle="normal"
            android:paddingBottom="8dp"
            android:paddingTop="32dp"
            android:textSize="14sp" />

        <Button
            android:id="@+id/realtimegetGPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/realtimegetGPStxt"
            android:textSize="7pt"
            android:textStyle="normal"
            android:textColor="@android:color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>